# news-articles

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
news/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_remove_news_tags.py  0003_news_views.py
news/static/news/css/: styles.css
news/static/news/js/: scripts.js
news/templates/news/: index.html  news_form.html  post.html  search_results.html
news_articles/: asgi.py  settings.py  urls.py  wsgi.py
